# console_logger

./: CMakeLists.txt  README.md
include/altenter/: console_logger.h
include/console_logger/: console_logger.h
src/: console_logger.cpp
